--- a/favoritecharacter/build.gradle
+++ b/favoritecharacter/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'com.android.dynamic-feature'
     id 'kotlin-android'
+
+    id 'jacoco'
 }
 
 apply from: '../shared_dependencies.gradle'
+apply from: '../task_jacocoTestReport.gradle'
 
 android {
     compileSdkVersion 30
@@ -33,6 +36,15 @@ android {
     }
     buildFeatures {
         viewBinding true
+    }
+    testOptions {
+        unitTests.all {
+            jacoco {
+                includeNoLocationClasses = true
+                excludes = ['jdk.internal.*']
+            }
+        }
+        unitTests.returnDefaultValues = true
     }
 }
 
