--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Run Tests
           command: ./gradlew lint test
       - store_test_results:
-          path: app/build/test-results
+          path: app/build/test-results, core/build/test-results, favoritecharacter/build/test-results
       - store_artifacts:  
           path: app/build/outputs/apk/debug/
           destination: artifact-file
