--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,6 @@ jobs:
       - store_artifacts:  
           path: app/build/outputs/apk/debug/
           destination: artifact-file
+      - run:
+          name: Generate Code Coverage
+          command: ./gradlew connectedCheck
