--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,19 @@ jobs:
       - store_artifacts:  
           path: app/build/outputs/apk/debug/
           destination: artifact-file
+
+  android-test:
+    executor:
+      name: android/android-machine
+      resource-class: xlarge
+    steps:
+      - checkout
+      - android/start-emulator-and-run-tests:
+          test-command: ./gradlew connectedCheck
+          system-image: system-images;android-30;google_apis;x86
+      - codecov/upload:
+          file: app\build\reports\coverage\debug\report.xml
+      - codecov/upload:
+          file: core\build\reports\coverage\debug\report.xml
+      - codecov/upload:
+          file: favoritecharacter\build\reports\coverage\debug\report.xml
