--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 version: 2.1
 
 orbs:
-    android: circleci/android@0.2.1
+    android: circleci/android@1.0.3
+    codecov: codecov/codecov@1.0.2
 
 jobs:
     android-test:
