--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,9 @@ orbs:
 
 jobs:
       build:
-        executor: android/android
+        executor:
+              name: android/android-machine
+              resource-class: large
         steps:
             - checkout
             - restore_cache:
