Edited favoritecharacter manifest

--- a/favoritecharacter/build.gradle
+++ b/favoritecharacter/build.gradle
@@ -23,8 +23,8 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
+        debug {
+            testCoverageEnabled true
         }
     }
     compileOptions {
