--- a/favoritecharacter/src/main/AndroidManifest.xml
+++ b/favoritecharacter/src/main/AndroidManifest.xml
@@ -7,10 +7,13 @@
         dist:instant="false"
         dist:title="@string/title_favoritecharacter">
         <dist:delivery>
-            <dist:install-time />
+            <dist:install-time >
+                <dist:removable dist:value="true" />
+            </dist:install-time>
         </dist:delivery>
 
         <dist:fusing dist:include="true" />
+
     </dist:module>
 
     <application>
