--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -10,6 +10,7 @@ dependencies {
 
     //ui
     implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation "com.airbnb.android:lottie:3.7.0"
 
     //di
     implementation "io.insert-koin:koin-android:3.0.1"
