--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -11,6 +11,7 @@ dependencies {
     //ui
     implementation "com.github.bumptech.glide:glide:4.12.0"
     implementation "com.airbnb.android:lottie:3.7.0"
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
 
     //di
     implementation "io.insert-koin:koin-android:3.0.1"
