--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -15,4 +15,14 @@ dependencies {
 
     //di
     implementation "io.insert-koin:koin-android:3.0.1"
+
+    //testing
+    testImplementation 'org.mockito:mockito-core:3.9.0'
+    testImplementation 'org.mockito:mockito-inline:3.9.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-test', version: '1.5.0'
+    testImplementation 'app.cash.turbine:turbine:0.5.1'
+
+
 }
